# Jalan3D

./: AGENTS.md
.github/workflows/: build-android.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jalan3d/: MainActivity.kt
android/app/src/main/java/com/jalan3d/camera/: PhotoCapture.kt
android/app/src/main/java/com/jalan3d/data/: ExtrusionData.kt  Report.kt  ReportRepository.kt  Severity.kt
android/app/src/main/java/com/jalan3d/data/api/: ApiClient.kt  ApiConfig.kt  ReportApi.kt  ReportDto.kt
android/app/src/main/java/com/jalan3d/map/: ExtrusionLayer.kt  Map3DController.kt  MapMarkers.kt  MapScreen.kt  MapViewModel.kt
android/app/src/main/java/com/jalan3d/ui/: ListScreen.kt  Navigation.kt  ProfileScreen.kt  ReportDetailSheet.kt  ReportFormSheet.kt
android/app/src/main/java/com/jalan3d/ui/theme/: Theme.kt
android/app/src/main/res/values/: themes.xml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 001_create_reports.sql
backend/src/: config.rs  error.rs  geocode.rs  main.rs  state.rs
backend/src/db/: mod.rs  pool.rs  reports.rs
backend/src/models/: report.rs
backend/src/routes/: geocode.rs  health.rs  mod.rs  reports.rs  upload.rs
docs/: checklist.md  plan.md  prd.md
