[package]
name = "jalan3d-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "migrate",
    "chrono",
    "uuid",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTTP middleware (CORS)
tower-http = { version = "0.6", features = ["cors"] }

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing (resize foto)
image = "0.25"

# Multipart upload
axum-extra = { version = "0.10", features = ["multipart"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
